Minor fix to align malmo masthead when logged in

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -74,9 +74,9 @@
 }
 .admin-bar {
   #malmo-masthead {
-    top: 45px;
+    top: 46px;
      @include breakpoint(783px) {
-      top: 30px;
+      top: 32px;
      }
   }
 }
